--- a/server/blockchain/Cargo.toml
+++ b/server/blockchain/Cargo.toml
@@ -10,7 +10,7 @@ chrono = "0.4.0"
 sha2 = "0.10.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-libp2p = { version = "0.42", features = ["tcp-tokio", "mdns"] }
+libp2p = { version = "0.42.2", features = ["tcp-tokio"] }
 tokio = { version = "1.0", features = [
   "io-util",
   "io-std",
