--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev:client": "cd client && npm run start",
-    "dev:server": "cd server && npm run start"
+    "dev:server": "cd server && npm run start",
+    "build:quiz": "node ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/ShaunSHamilton/proof-of-stake/issues"
   },
-  "homepage": "https://github.com/ShaunSHamilton/proof-of-stake#readme"
+  "homepage": "https://github.com/ShaunSHamilton/proof-of-stake#readme",
+  "devDependencies": {
+    "js-yaml": "^4.1.0"
+  }
 }
