--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "monaco-editor-webpack-plugin": "^7.0.1",
-    "prismjs": "^1.26.0",
+    "marked": "^4.0.12",
+    "prismjs": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-monaco-editor": "^0.47.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
