--- a/server/blockchain/Cargo.toml
+++ b/server/blockchain/Cargo.toml
@@ -25,3 +25,5 @@ once_cell = "1.5"
 log = "0.4"
 pretty_env_logger = "0.4"
 rand = "0.8.5"
+tokio-stream = { version = "0.1.8", features = ["net"] }
+http = "0.2.6"
