--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev:client": "cd client && npm run start",
     "dev:server": "cd server && npm run start",
-    "build:quiz": "node ./server/index.js"
+    "build:quiz": "node ./utils/parser/index.js"
   },
   "repository": {
     "type": "git",
