--- a/server/node/package.json
+++ b/server/node/package.json
@@ -2,18 +2,44 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShaunSHamilton/silly-websocket.git"
+  },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "develop": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:s": "npm run rollup:server && node bundle.js",
+    "start:c": "npm run rollup:client && serve client",
+    "dev:server": "npm run rollup:server && nodemon bundle.js",
+    "dev:client": "npm run rollup:client && live-server --port=8080 --entry-file='./client/index.html'",
+    "nodemon": "nodemon",
+    "rollup": "npm run rollup:server && npm run rollup:client && npm run rollup:utils",
+    "rollup:server": "rollup index.js --file bundle.js --format cjs",
+    "rollup:client": "rollup client/index.js --file client/bundle.js --format iife -p @rollup/plugin-replace -c",
+    "rollup:utils": "rollup utils/index.js --file utils/bundle.js --format umd --name 'utils'",
+    "serve": "serve"
   },
-  "author": "",
+  "author": "Shaun Hamilton",
   "license": "ISC",
   "dependencies": {
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@rollup/plugin-replace": "^4.0.0",
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.15",
+    "rollup": "^2.70.1",
+    "serve": "^13.0.2"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "node_modules/*",
+      "client/*",
+      "bundle.js"
+    ],
+    "events": {
+      "start": "npm run rollup:server",
+      "restart": "npm run rollup:server"
+    }
   }
 }
