--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "rust-analyzer.linkedProjects": ["server/blockchain/Cargo.toml"]
+  "rust-analyzer.linkedProjects": ["blockchain/Cargo.toml"]
 }
