--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:client": "cd client && npm run start",
     "dev:server": "cd server && npm run start",
     "build:quiz": "node ./utils/parser/index.js",
-    "build:blockchain": "wasm-pack build blockchain --target nodejs"
+    "build:blockchain": "wasm-pack build blockchain --target nodejs",
+    "rollup:node": "rollup node/index.js --file node/bundle.js --format cjs",
+    "rollup:utils": "rollup utils/websockets/index.js --file utils/websockets/bundle.js --format umd --name 'utils'"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,9 @@
   "homepage": "https://github.com/ShaunSHamilton/proof-of-stake#readme",
   "devDependencies": {
     "js-yaml": "^4.1.0",
+    "nodemon": "^2.0.15",
+    "rollup": "^2.70.1",
+    "serve": "^13.0.2",
     "wasm-pack": "^0.10.2"
   }
 }
