--- a/blockchain/Cargo.toml
+++ b/blockchain/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.79"
+wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
 chrono = "0.4.19"
 sha2 = "0.10.2"
 serde = { version = "1.0.136", features = ["derive"] }
