--- a/blockchain/Cargo.toml
+++ b/blockchain/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
+wasm-bindgen-test = "0.3.29"
 chrono = "0.4.19"
 sha2 = "0.10.2"
 serde = { version = "1.0.136", features = ["derive"] }
