test: no-rollup if module?

--- a/node/package.json
+++ b/node/package.json
@@ -19,6 +19,7 @@
     "rollup:utils": "rollup utils/index.js --file utils/bundle.js --format umd --name 'utils'",
     "serve": "serve"
   },
+  "type": "module",
   "author": "Shaun Hamilton",
   "license": "ISC",
   "dependencies": {
