chore: add workspaces

--- a/node/package.json
+++ b/node/package.json
@@ -8,15 +8,11 @@
   },
   "main": "index.js",
   "scripts": {
-    "start:s": "npm run rollup:server && node bundle.js",
-    "start:c": "npm run rollup:client && serve client",
-    "dev:server": "npm run rollup:server && nodemon bundle.js",
-    "dev:client": "npm run rollup:client && live-server --port=8080 --entry-file='./client/index.html'",
+    "start:s": "node bundle.js",
+    "start:c": "serve client",
+    "dev:server": "nodemon bundle.js",
+    "dev:client": "live-server --port=8080 --entry-file='./client/index.html'",
     "nodemon": "nodemon",
-    "rollup": "npm run rollup:server && npm run rollup:client && npm run rollup:utils",
-    "rollup:server": "rollup index.js --file bundle.js --format cjs",
-    "rollup:client": "rollup client/index.js --file client/bundle.js --format iife -p @rollup/plugin-replace -c",
-    "rollup:utils": "rollup utils/index.js --file utils/bundle.js --format umd --name 'utils'",
     "serve": "serve"
   },
   "type": "module",
@@ -26,10 +22,8 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "^4.0.0",
     "live-server": "^1.2.1",
     "nodemon": "^2.0.15",
-    "rollup": "^2.70.1",
     "serve": "^13.0.2"
   },
   "nodemonConfig": {
