--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "test": "tests"
   },
   "scripts": {
-    "dev:client": "cd client && npm run start",
-    "dev:node": "npm run rollup:node && node node/bundle.js",
-    "test": "node node/index.js",
+    "start:client": "npm -w=client run dev",
+    "dev:client": "npm -w=client run start",
+    "dev:node": "npm -w=node run dev",
     "build:quiz": "node ./utils/parser/index.js",
-    "build:blockchain": "wasm-pack build blockchain --target nodejs",
-    "rollup:node": "rollup node/index.js --file node/bundle.js --format cjs --config rollup.config.js",
-    "rollup:utils": "rollup utils/websockets/index.js --file utils/websockets/bundle.js --format umd --name 'utils'"
+    "build:blockchain": "wasm-pack build blockchain --target nodejs"
   },
+  "workspaces": [
+    "client",
+    "node"
+  ],
   "type": "module",
   "repository": {
     "type": "git",
@@ -35,14 +37,9 @@
     "url": "https://github.com/ShaunSHamilton/proof-of-stake/issues"
   },
   "homepage": "https://github.com/ShaunSHamilton/proof-of-stake#readme",
-  "dependencies": {
-    "blockchain": "file:blockchain/pkg"
-  },
   "devDependencies": {
-    "@rollup/plugin-wasm": "^5.1.2",
     "js-yaml": "^4.1.0",
     "nodemon": "^2.0.15",
-    "rollup": "^2.70.1",
     "serve": "^13.0.2",
     "wasm-pack": "^0.10.2"
   }
