--- a/node/package.json
+++ b/node/package.json
@@ -8,12 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start:s": "node bundle.js",
-    "start:c": "serve client",
-    "dev:server": "nodemon bundle.js",
-    "dev:client": "live-server --port=8080 --entry-file='./client/index.html'",
-    "nodemon": "nodemon",
-    "serve": "serve"
+    "dev": "node index.js"
   },
   "type": "module",
   "author": "Shaun Hamilton",
@@ -22,19 +17,6 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "live-server": "^1.2.1",
-    "nodemon": "^2.0.15",
-    "serve": "^13.0.2"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "node_modules/*",
-      "client/*",
-      "bundle.js"
-    ],
-    "events": {
-      "start": "npm run rollup:server",
-      "restart": "npm run rollup:server"
-    }
+    "nodemon": "^2.0.15"
   }
 }
