--- a/blockchain/Cargo.toml
+++ b/blockchain/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 hex = "0.4.3"
 rand = "0.8.5"
+getrandom = { version = "0.2.5", features = ["js"] }
