--- a/blockchain/Cargo.toml
+++ b/blockchain/Cargo.toml
@@ -18,3 +18,6 @@ serde_json = "1.0.79"
 hex = "0.4.3"
 rand = "0.8.5"
 getrandom = { version = "0.2.5", features = ["js"] }
+
+[profile.release]
+debug = true
