--- a/node/package.json
+++ b/node/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node --stack-trace-limit=2 index.js",
+    "start": "node index.js"
   },
   "type": "module",
   "author": "Shaun Hamilton",
