--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:blockchain": "wasm-pack build --debug blockchain --target nodejs",
     "build:client": "npm -w=client run build",
     "build:quiz": "node ./utils/parser/index.js",
-    "dev:client": "npm -w=client run dev",
+    "dev:client": "npm -w=client run watch",
     "dev:node": "LOG_LEVEL=debug npm -w=node run dev",
     "start:client": "npm -w=client run start",
     "start:node": "npm -w=node run start"
